--- a/WpfStudentChat/Views/Windows/LoginWindow.xaml
+++ b/WpfStudentChat/Views/Windows/LoginWindow.xaml
@@ -5,6 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfStudentChat.Views.Windows"
         xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+        xmlns:helpers="clr-namespace:WpfStudentChat.Helpers"
+        xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
         mc:Ignorable="d"
         Title="登录" Height="300" Width="400"
         d:DataContext="{d:DesignInstance Type=local:LoginWindow}"
@@ -28,7 +30,11 @@
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="0 10 0 0">
                 <ui:TextBlock Text="密码: " Width="50" />
-                <ui:PasswordBox Width="200" Password="{Binding ViewModel.Password}"/>
+                <ui:PasswordBox Width="200">
+                    <b:Interaction.Behaviors>
+                        <helpers:PasswordBoxBehavior Password="{Binding ViewModel.Password,Mode=TwoWay}" />
+                    </b:Interaction.Behaviors>
+                </ui:PasswordBox>
             </StackPanel>
             <Border HorizontalAlignment="Center" Margin="0 10 0 0">
                 <Button Content="登录" Padding="20 5" Command="{Binding ViewModel.LoginCommand}" />
