--- a/WpfStudentChat/Views/Windows/LoginWindow.xaml
+++ b/WpfStudentChat/Views/Windows/LoginWindow.xaml
@@ -1,44 +1,57 @@
-﻿<Window x:Class="WpfStudentChat.Views.Windows.LoginWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfStudentChat.Views.Windows"
-        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-        xmlns:helpers="clr-namespace:WpfStudentChat.Helpers"
-        xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
-        mc:Ignorable="d"
-        Title="登录" Height="300" Width="400"
-        d:DataContext="{d:DesignInstance Type=local:LoginWindow}"
-        WindowStartupLocation="CenterScreen">
+﻿<ui:FluentWindow x:Class="WpfStudentChat.Views.Windows.LoginWindow"
+                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                 xmlns:local="clr-namespace:WpfStudentChat.Views.Windows"
+                 xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+                 xmlns:helpers="clr-namespace:WpfStudentChat.Helpers"
+                 xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
+                 mc:Ignorable="d"
+                 Title="SimpleChat - Login"
+                 Height="300" Width="400"
+                 ResizeMode="NoResize"
+                 WindowBackdropType="Mica"
+                 ExtendsContentIntoTitleBar="True"
+                 WindowCornerPreference="Round"
+                 WindowStartupLocation="CenterScreen"
+                 d:DataContext="{d:DesignInstance Type=local:LoginWindow}">
 
-    <Window.Resources>
+    <ui:FluentWindow.Resources>
         <Style TargetType="ui:TextBlock" BasedOn="{StaticResource ResourceKey={x:Type TextBlock}}">
             <Setter Property="VerticalAlignment" Value="Center"/>
         </Style>
         <Style TargetType="ui:TextBox" BasedOn="{StaticResource ResourceKey={x:Type TextBox}}">
             <Setter Property="VerticalContentAlignment" Value="Center"/>
         </Style>
-    </Window.Resources>
+    </ui:FluentWindow.Resources>
 
-    <Grid>
-        <StackPanel Orientation="Vertical" Margin="0 0 0 0"
-                    VerticalAlignment="Center" HorizontalAlignment="Center">
-            <StackPanel Orientation="Horizontal">
-                <ui:TextBlock Text="用户名: " Width="50" />
+    <DockPanel>
+        <ui:TitleBar DockPanel.Dock="Top" ShowMaximize="False" ShowMinimize="False"/>
+
+        <StackPanel Orientation="Vertical"
+                    Margin="0 0 0 0"
+                    HorizontalAlignment="Center"
+                    ClipToBounds="False">
+            <TextBlock HorizontalAlignment="Center"
+                       FontSize="24"
+                       Text="SimpleChat"/>
+
+            <StackPanel Orientation="Horizontal" Margin="0 36 0 0">
+                <ui:TextBlock Text="用户名: " Width="60" />
                 <ui:TextBox Width="200" Text="{Binding ViewModel.Username}" />
             </StackPanel>
-            <StackPanel Orientation="Horizontal" Margin="0 10 0 0">
-                <ui:TextBlock Text="密码: " Width="50" />
+            <StackPanel Orientation="Horizontal" Margin="0 10 0 0" ClipToBounds="False">
+                <ui:TextBlock Text="密码: " Width="60" />
                 <ui:PasswordBox Width="200">
                     <b:Interaction.Behaviors>
                         <helpers:PasswordBoxBehavior Password="{Binding ViewModel.Password,Mode=TwoWay}" />
                     </b:Interaction.Behaviors>
                 </ui:PasswordBox>
             </StackPanel>
-            <Border HorizontalAlignment="Center" Margin="0 10 0 0">
-                <Button Content="登录" Padding="20 5" Command="{Binding ViewModel.LoginCommand}" />
+            <Border HorizontalAlignment="Center" Margin="0 36 0 0">
+                <Button Content="登录" Padding="36 10" Command="{Binding ViewModel.LoginCommand}" />
             </Border>
         </StackPanel>
-    </Grid>
-</Window>
+    </DockPanel>
+</ui:FluentWindow>
