feat: 优化客户端逻辑, 实现更多服务端接口

--- a/WpfStudentChat/Views/Windows/LoginWindow.xaml
+++ b/WpfStudentChat/Views/Windows/LoginWindow.xaml
@@ -50,7 +50,7 @@
                 </ui:PasswordBox>
             </StackPanel>
             <Border HorizontalAlignment="Center" Margin="0 36 0 0">
-                <Button Content="登录" Padding="36 10" Command="{Binding ViewModel.LoginCommand}" />
+                <Button Content="登录" Padding="36 10" Command="{Binding LoginCommand}" />
             </Border>
         </StackPanel>
     </DockPanel>
