--- a/WpfStudentChat/Views/Pages/ContactsPage.xaml
+++ b/WpfStudentChat/Views/Pages/ContactsPage.xaml
@@ -7,15 +7,20 @@
       xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
       xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
       xmlns:mb="clr-namespace:WpfStudentChat.Behaviors"
+      xmlns:bp="clr-namespace:EleCho.WpfUtilities;assembly=EleCho.WpfUtilities.BindingProxy"
       mc:Ignorable="d"
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ContactsPage"
       d:DataContext="{d:DesignInstance Type=local:ContactsPage}">
 
+    <b:Interaction.Triggers>
+        <b:EventTrigger EventName="Loaded">
+            <b:InvokeCommandAction Command="{Binding LoadFriendsAndGroupsCommand}"/>
+        </b:EventTrigger>
+    </b:Interaction.Triggers>
+
     <Page.Resources>
-        <Style TargetType="Button" BasedOn="{StaticResource ResourceKey={x:Type ui:Button}}">
-            <Setter Property="FontSize" Value="16"/>
-        </Style>
+        <bp:BindingProxy x:Key="DataProxy" Data="{Binding}"/>
     </Page.Resources>
 
     <Grid>
@@ -26,51 +31,83 @@
         </Grid.ColumnDefinitions>
 
         <Border Grid.Column="0">
-            <StackPanel Orientation="Vertical">
-                <ui:ListView SelectedIndex="{Binding ViewModel.FriendGroupRequestIndex}">
-                    <ListBoxItem Padding="5">
-                        <TextBlock Text="好友请求" />
-                    </ListBoxItem>
-                    <ListBoxItem Padding="5">
-                        <TextBlock Text="群请求" />
-                    </ListBoxItem>
-                </ui:ListView>
+            <ScrollViewer>
+                <StackPanel Orientation="Vertical">
+                    <ui:ListView SelectionChanged="ListView_SelectionChanged">
+                        <ui:ListViewItem Padding="5">
+                            <TextBlock Text="Friend requests" />
+                        </ui:ListViewItem>
+                        <ui:ListViewItem Padding="5">
+                            <TextBlock Text="Group requests" />
+                        </ui:ListViewItem>
+                    </ui:ListView>
 
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
+                    <Border Height=".8"
+                            Opacity=".5"
+                            Background="{DynamicResource TextFillColorDisabledBrush}"
+                            CornerRadius="3"
+                            Margin="3 10 3 0"/>
 
-                    <ui:Button Content="好友" Grid.Column="0" HorizontalAlignment="Stretch" Margin="2" Command="{Binding ViewModel.SwitchFriendCommand}" />
-                    <ui:Button Content="群" Grid.Column="1" HorizontalAlignment="Stretch" Margin="2" Command="{Binding ViewModel.SwitchGroupCommand}"/>
-                </Grid>
-
-                <ui:ListView ItemsSource="{Binding ViewModel.Identifiables}" Margin="0 10 0 0" SelectedItem="{Binding ViewModel.SelectedItem}">
-                    <ui:ListView.ItemTemplate>
-                        <DataTemplate>
-                            <Border>
-                                <StackPanel Orientation="Horizontal">
-                                    <Border Background="Aquamarine" Width="30" Height="30">
-                                        <ui:Image>
+                    <TextBlock Text="Groups:" Margin="3 10 0 0"/>
+                    <ui:ListView ItemsSource="{Binding ViewModel.Groups}">
+                        <ui:ListView.ItemTemplate>
+                            <DataTemplate>
+                                <Border Padding="5 0 0 0" Background="Transparent">
+                                    <Border.InputBindings>
+                                        <MouseBinding MouseAction="LeftDoubleClick"
+                                                      Command="{Binding Source={StaticResource DataProxy},Path=Data.StartGroupChatCommand}"
+                                                      CommandParameter="{Binding}"/>
+                                    </Border.InputBindings>
+                                    <StackPanel Orientation="Horizontal">
+                                        <Border Width="30" Height="30" CornerRadius="3">
                                             <b:Interaction.Behaviors>
-                                                <mb:ImageLoadBehavior ImageHash="{Binding AvatarHash}"/>
+                                                <mb:BackgroundImageLoadBehavior ImageHash="{Binding AvatarHash}"/>
                                             </b:Interaction.Behaviors>
-                                        </ui:Image>
-                                    </Border>
-                                    <TextBlock Text="{Binding Name}" VerticalAlignment="Center" Margin="5 0 0 0"/>
-                                </StackPanel>
-                            </Border>
-                        </DataTemplate>
-                    </ui:ListView.ItemTemplate>
-                </ui:ListView>
-            </StackPanel>
+                                        </Border>
+                                        <TextBlock Text="{Binding Name}" VerticalAlignment="Center" Margin="5 0 0 0"/>
+                                    </StackPanel>
+                                </Border>
+                            </DataTemplate>
+                        </ui:ListView.ItemTemplate>
+                    </ui:ListView>
+
+                    <Border Height=".8"
+                            Opacity=".5"
+                            Background="{DynamicResource TextFillColorDisabledBrush}"
+                            CornerRadius="3"
+                            Margin="3 10 3 0"/>
+
+                    <TextBlock Text="Friends:" Margin="3 10 0 0"/>
+                    <ui:ListView ItemsSource="{Binding ViewModel.Friends}">
+                        <ui:ListView.ItemTemplate>
+                            <DataTemplate>
+                                <Border Padding="2 0 0 0" Background="Transparent">
+                                    <Border.InputBindings>
+                                        <MouseBinding MouseAction="LeftDoubleClick"
+                                                      Command="{Binding Source={StaticResource DataProxy},Path=Data.StartPrivateChatCommand}"
+                                                      CommandParameter="{Binding}"/>
+                                    </Border.InputBindings>
+                                    <StackPanel Orientation="Horizontal">
+                                        <Border Width="30" Height="30" CornerRadius="3">
+                                            <b:Interaction.Behaviors>
+                                                <mb:BackgroundImageLoadBehavior ImageHash="{Binding AvatarHash}"/>
+                                            </b:Interaction.Behaviors>
+                                        </Border>
+                                        <TextBlock Text="{Binding Nickname}" VerticalAlignment="Center" Margin="5 0 0 0"/>
+                                    </StackPanel>
+                                </Border>
+                            </DataTemplate>
+                        </ui:ListView.ItemTemplate>
+                    </ui:ListView>
+
+                </StackPanel>
+            </ScrollViewer>
         </Border>
 
         <GridSplitter Grid.Column="1"/>
 
         <Border Grid.Column="2">
-            <Frame Content="{Binding ViewModel.Content}"/>
+            <Frame Name="ContentFrame"/>
         </Border>
     </Grid>
 </Page>
