--- a/WpfStudentChat/Views/Pages/PrivateMessagesPage.xaml
+++ b/WpfStudentChat/Views/Pages/PrivateMessagesPage.xaml
@@ -1,14 +1,50 @@
 ﻿<Page x:Class="WpfStudentChat.Views.Pages.PrivateMessagesPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:WpfStudentChat.Views.Pages"
-      mc:Ignorable="d" 
+      xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+      xmlns:cvt="clr-namespace:WpfStudentChat.Converters"
+      mc:Ignorable="d"
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="PrivateMessagesPage">
+      Title="PrivateMessagesPage"
+      d:DataContext="{d:DesignInstance Type=local:PrivateMessagesPage}"
+      d:Background="White">
+
+    <Page.Resources>
+        <cvt:UserIdIsSelfConverter x:Key="UserIdIsSelf" SelfUserId="{Binding SelfUserId}"/>
+    </Page.Resources>
 
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="3"/>
+            <RowDefinition Height="120" MinHeight="60" MaxHeight="500"/>
+        </Grid.RowDefinitions>
+
+        <Grid>
+            <ItemsControl ItemsSource="{Binding ViewModel.Messages}">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+        </Grid>
+
+        <GridSplitter Grid.Row="1"
+                      Background="Transparent"
+                      HorizontalAlignment="Stretch"
+                      VerticalAlignment="Stretch"/>
+
+        <Grid Grid.Row="2">
+            <ui:TextBox AcceptsReturn="True"
+                        Text="{Binding ViewModel.TextInput,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
+            <ui:Button VerticalAlignment="Bottom"
+                       HorizontalAlignment="Right"
+                       Margin="12"
+                       Content="Send"
+                       Command="{Binding SendMessageCommand}"/>
+        </Grid>
     </Grid>
 </Page>
