--- a/WpfStudentChat/Views/Windows/MainWindow.xaml
+++ b/WpfStudentChat/Views/Windows/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<ui:FluentWindow
+﻿<ui:UiWindow
     x:Class="WpfStudentChat.Views.Windows.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -14,13 +14,11 @@
     d:DataContext="{d:DesignInstance local:MainWindow,IsDesignTimeCreatable=True}"
     d:DesignHeight="450"
     d:DesignWidth="800"
-    ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
-    ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
     Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+    ExtendsContentIntoTitleBar="True"
     WindowBackdropType="Mica"
     WindowCornerPreference="Round"
     WindowStartupLocation="CenterScreen"
-    ExtendsContentIntoTitleBar="True"
     mc:Ignorable="d">
 
     <b:Interaction.Triggers>
@@ -33,22 +31,19 @@
         <ui:TitleBar
             DockPanel.Dock="Top"
             Background="Transparent"
-            Title="{Binding ViewModel.ApplicationTitle}">
-            <ui:TitleBar.Icon>
-                <ui:ImageIcon Source="pack://application:,,,/Assets/wpfui-icon-256.png" />
-            </ui:TitleBar.Icon>
-        </ui:TitleBar>
+            Title="{Binding ViewModel.ApplicationTitle}"
+            Icon="pack://application:,,,/Assets/wpfui-icon-256.png"/>
 
-        <ui:NavigationView x:Name="RootNavigation"
-                           BreadcrumbBar="{Binding ElementName=BreadcrumbBar}"
-                           FooterMenuItemsSource="{Binding ViewModel.FooterMenuItems, Mode=OneWay}"
-                           FrameMargin="0"
-                           IsBackButtonVisible="Visible"
-                           IsPaneToggleVisible="True"
-                           MenuItemsSource="{Binding ViewModel.MenuItems, Mode=OneWay}"
-                           PaneDisplayMode="LeftFluent">
-            <ui:NavigationView.PaneHeader>
-                <Border Background="Transparent">
+        <Border DockPanel.Dock="Left"
+                Background="#88FFFFFF">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <Border Width="42" Height="42" Margin="0 0 0 8"
+                        CornerRadius="5"
+                        Background="#33000000">
                     <b:Interaction.Triggers>
                         <b:EventTrigger EventName="PreviewMouseDown">
                             <b:InvokeCommandAction Command="{Binding ShowSetProfileWindowCommand}"/>
@@ -57,17 +52,24 @@
                     <Border.Effect>
                         <DropShadowEffect ShadowDepth="1" Opacity=".5"/>
                     </Border.Effect>
-                    <Border Width="50"
-                            Height="50"
-                            CornerRadius="5"
-                            HorizontalAlignment="Center"
-                            Margin="0 0 0 14">
+                    <Border Width="42" Height="42" CornerRadius="5">
                         <b:Interaction.Behaviors>
                             <mb:BackgroundImageLoadBehavior ImageHash="{Binding ViewModel.Profile.AvatarHash}"/>
                         </b:Interaction.Behaviors>
                     </Border>
                 </Border>
-            </ui:NavigationView.PaneHeader>
-        </ui:NavigationView>
+                <ui:NavigationStore x:Name="RootNavigation"
+                                    Grid.Row="1"
+                                    ScrollViewer.CanContentScroll="False"
+                                    ScrollViewer.VerticalScrollBarVisibility="Disabled"
+                                    Items="{Binding ViewModel.MenuItems}"
+                                    Frame="{Binding ElementName=RootFrame}">
+
+                </ui:NavigationStore>
+            </Grid>
+        </Border>
+
+
+        <Frame x:Name="RootFrame"/>
     </DockPanel>
-</ui:FluentWindow>
+</ui:UiWindow>
