--- a/WpfStudentChat/Views/Windows/SetProfileWindow.xaml
+++ b/WpfStudentChat/Views/Windows/SetProfileWindow.xaml
@@ -1,22 +1,22 @@
-﻿<ui:FluentWindow x:Class="WpfStudentChat.Views.Windows.SetProfileWindow"
-                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                 xmlns:local="clr-namespace:WpfStudentChat.Views.Windows"
-                 xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-                 xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
-                 xmlns:mb="clr-namespace:WpfStudentChat.Behaviors"
-                 ExtendsContentIntoTitleBar="True"
-                 WindowBackdropType="Mica"
-                 UseLayoutRounding="True"
-                 mc:Ignorable="d"
-                 Title="SetProfileWindow"
-                 Height="450" Width="280"
-                 ResizeMode="NoResize"
-                 WindowStartupLocation="CenterOwner"
-                 Closing="FluentWindow_Closing"
-                 d:DataContext="{d:DesignInstance Type=local:SetProfileWindow,IsDesignTimeCreatable=False}">
+﻿<ui:UiWindow x:Class="WpfStudentChat.Views.Windows.SetProfileWindow"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:local="clr-namespace:WpfStudentChat.Views.Windows"
+             xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+             xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
+             xmlns:mb="clr-namespace:WpfStudentChat.Behaviors"
+             ExtendsContentIntoTitleBar="True"
+             WindowBackdropType="Mica"
+             UseLayoutRounding="True"
+             mc:Ignorable="d"
+             Title="SetProfileWindow"
+             Height="450" Width="280"
+             ResizeMode="NoResize"
+             WindowStartupLocation="CenterOwner"
+             Closing="FluentWindow_Closing"
+             d:DataContext="{d:DesignInstance Type=local:SetProfileWindow,IsDesignTimeCreatable=False}">
     <b:Interaction.Triggers>
         <b:EventTrigger EventName="Loaded">
             <b:InvokeCommandAction Command="{Binding LoadProfileCommand}"/>
@@ -65,4 +65,4 @@
             </StackPanel>
         </StackPanel>
     </DockPanel>
-</ui:FluentWindow>
+</ui:UiWindow>
