feat: 对聊天会话进行抽象, 并准备优化其逻辑

--- a/WpfStudentChat/Views/Windows/MainWindow.xaml
+++ b/WpfStudentChat/Views/Windows/MainWindow.xaml
@@ -63,6 +63,7 @@
                                     ScrollViewer.CanContentScroll="False"
                                     ScrollViewer.VerticalScrollBarVisibility="Disabled"
                                     Items="{Binding ViewModel.MenuItems}"
+                                    Footer="{Binding ViewModel.FooterMenuItems}"
                                     Frame="{Binding ElementName=RootFrame}">
 
                 </ui:NavigationStore>
